--- a/style.css
+++ b/style.css
@@ -98,7 +98,11 @@
     width:10.4vw;
 }
 
-@media screen and(min-width:992px) and (max-width:1279px) {
+
+
+
+
+@media screen and(min-width:830px) and (max-width:1400px) {
     
     .section-c{
         display: flex;
@@ -134,7 +138,7 @@
     .img-2{
         width: 25.4vw;
         height: 23.9vw;
-        margin-top: 2.9vw; /*bax*/
+        margin-top: 2.9vw; 
         margin-left: 11.4vw;
     }
     
@@ -144,7 +148,7 @@
         margin-left:8.5vw;
         width:69.6vw;
         height: 15.2vw;
-        margin-bottom: 5.4vw; /*bura bax*/
+        margin-bottom: 5.4vw; 
     }
     .img-3{
         height: 15.2vw;
@@ -201,7 +205,7 @@
 
 
 /* For mobile */
-@media screen and(min-width:320px) and (max-width:991px){
+@media screen and(min-width:375px) and (max-width:830px){
     
     .section-c{
         flex-direction: column;
